# basic_project

./: .cirrus.yml  .gitignore  CMakeLists.txt  conanfile.py
cmake/: FindLibCXX.cmake  FindSanitizer.cmake  add_basic_project_implementation.cmake  enable-sanitisers.cmake  macros.cmake
conan/: remotes.txt
conan/profiles/: clang-4  clang-4-libcxx  clang-4-libcxx-msan  clang-5  clang-5-libcxx  clang-5-libcxx-msan  clang-6  clang-6-libcxx  clang-6-libcxx-msan  clang-7  clang-7-libcxx  clang-7-libcxx-msan  clang-8  clang-8-libcxx  clang-8-libcxx-msan
config/hooks/: clang-format.sh
test/regression/clang-tidy/: -cert-dcl21-cpp.cpp  -cert-dcl59-cpp.cpp  -google-build-namespaces.cpp  -google-build-using-namespace.cpp  -google-runtime-references.cpp  -readability-named-parameter.cpp  google-build-namespaces.hpp
